# Resume-Graphic-Analyzer

./: .gitignore  README.md  join-cmd.txt  kubeadm-config.yaml
backend/: .gitignore  pyenvironment.yml  requirements.txt
backend/graph/: .gitignore  Cargo.toml
backend/graph/src/: lib.rs
backend/graph/tests/: test_foo.rs
backend/src/: chroma_db.py  ll.py  scrape.py  train.py  wsgi.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue  Upload.vue
