[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[dependencies]
graphviz-rust = "0.7.1"
wasm-bindgen = "0.2.90"
getrandom = { version = "0.2", features = ["js"] } # DO NOT REMOVE: required for wasm to build
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
